# OTOPS-Rover-GNC

./: Camera Checlist.txt  GPT_IK.py  README.md  RTSP on Start Systemd Service.txt  RUNNING.md  Remote SSH into Jetson Instructions.txt  cam_grid_v2.py  cam_gui_v2.py  gui_v2.py  olly_cam_grid.py  olly_cam_gui .py  olly_cam_gui.py  rtspstream.c  testbranch.md
SEW/: Mo_SEW_Ethercat.py
arduino/: controller.ino
aresgo/: go.mod  main.go
aresgo/internal/control/: state.go
aresgo/internal/mock/: generator.go
aresgo/internal/model/: control.go  telemetry.go
aresui/: index.html  package-lock.json  package.json
aresui/src/: App.tsx
aruco/: Aruco 100mm.docx  aruco_detection.py  aruco_gen.py
aruco/py_pubsub_aruco/: package.xml  setup.cfg  setup.py
aruco/py_pubsub_aruco/py_pubsub_aruco/: publisher_member_function.py  subscriber_member_function.py
cam_gui/: base_cam_grid.py  main.py
cam_stream/: a.out  cam_scanner.c  gtk_demo.py  latest-rtspstream.c  no_gpu.txt  nodelayrtsp.c  rtspstream.c  teststream.c
cam_stream/old_stream_keep_incase/: webrtc1cam.c
cam_stream/olly_stereo_work/: calibration.py  calibration_images.py  calibrationtest.py  cam_data.txt  depth_map.py  depth_map2.py  simple_depth_map.py  stereo_calibration.py  stereovision.py  test.py
cam_stream/scanning_cams/: cam_data.txt  cam_scammer_backup.c  cam_scanner_test.c  main_cam_scanner.c
cameraui/: cam_grid_v2.py  gui_v2.py  old_cam_grid.py  old_cam_gui.py
gui/demo_data_ui/: app.py
jetson/: JETSON_SIM_TESTING.md  README.md  rover_bridge.py
old_cam_gui_keep_incase/: old_cam_gui.py
(+14 files in other folders)
