<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>py_pubsub_aruco</name>
  <version>0.0.0</version>
  <description>pub getting aruco marker ids and sub storing them</description>
  <maintainer email="olly.love@ontariotechu.net">ollylove</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>opencv-python</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
